Closed
Bug 369042
Opened 18 years ago
Closed 18 years ago
Bookmark for missing local file is wonky
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: alqahira, Assigned: froodian)
Details
(Keywords: fixed1.8.1.3, polish)
Attachments
(2 files)
|
21.33 KB,
image/png
|
Details | |
|
2.82 KB,
patch
|
stuart.morgan+bugzilla
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1. Make a testcase somewhere on your HD
2. Bookmark said testcase
3. Forget about testcase (move it or delete it)
4. Open the Bookmarks Manager and wonder what the funny icon is
Actual: 32x32 generic file icon (may or may not be cropped strangely)
Expected: 16x16 generic file icon (or the icon we use for about:blank)
| Assignee | ||
Comment 1•18 years ago
|
||
I'm having trouble reproing this, does it happen every time for you?
| Assignee | ||
Comment 2•18 years ago
|
||
The answer to my question is "try to open the bookmark to see the wonkiness"
| Assignee | ||
Comment 3•18 years ago
|
||
| Reporter | ||
Comment 4•18 years ago
|
||
Comment on attachment 253912 [details] [diff] [review]
Patch
This also fixes wonkiness with location bar icons in e.g., the testcase for bug 369427.
Comment 5•18 years ago
|
||
Comment on attachment 253912 [details] [diff] [review]
Patch
I can't repro, but this seems reasonable; r=me.
Attachment #253912 -
Flags: superreview?(mikepinkerton)
Attachment #253912 -
Flags: review?(stuart.morgan)
Attachment #253912 -
Flags: review+
Comment 6•18 years ago
|
||
Comment on attachment 253912 [details] [diff] [review]
Patch
sr=pink
Attachment #253912 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 7•18 years ago
|
||
Dewonkified on trunk and MOZILLA_1_8_BRANCH.
You need to log in
before you can comment on or make changes to this bug.
Description
•