Camino only - Bug 369042: Fix bookmark icon for missing files. r=smorgan sr=pink