camino/src/browser/SiteIconProvider.mm
@@ -555,9 +555,12 @@ NeckoCacheHelper::ClearCache()
 
 + (NSString*)defaultFaviconLocationStringFromURI:(NSString*)inURI
 {
-  // about: urls and local files are special
-  if ([inURI hasPrefix:@"about:"] || [inURI hasPrefix:@"file:"])
+  if ([inURI hasPrefix:@"about:"])
     return inURI;
+
+  // If the file exists, return its path, otherwise use generic icon location
+  if ([inURI hasPrefix:@"file:"])
+    return ([[NSFileManager defaultManager] fileExistsAtPath:[[NSURL URLWithString:inURI] path]] ? inURI : @"about:local_file");
 
   // we use nsIURI here, rather than NSURL, because the former does
   // a better job with suspect urls (e.g. those containing |), and 
